syntax = "proto3";

option java_multiple_files = true;
option java_package = "online";

/**
 * 离线任务grpc服务定义
 */
service OnlineService {

  /**
   * 同步实时任务
   */
  rpc syncTask (GrpcOnlineRequest) returns (GrpcOnlineResponse) {

  }

  /**
   * 同步任务状态
   */
  rpc syncStatus (GrpcOnlineRequest) returns (GrpcOnlineResponse) {
  }

  /**
 * 测试
 */
  rpc test (GrpcOnlineRequest) returns (GrpcOnlineResponse) {
  }

}

//定义消息类型
message GrpcOnlineTask{
  string parentId = 1;
  int32 taskIndex = 2;
  int32  status = 3;
  string type = 4;
  int32 timeout = 5;
  string url = 6;
  string method = 7;
  string header = 8;
  string parameters = 9;
  string redisServer = 10;
  string redisPassword = 11;
  string redisKey = 12;
}

message GrpcOnlineRequest {
  string test = 1;
  GrpcOnlineTask grpcOnlineTask = 2;
  string active = 3;
}


message  GrpcOnlineResponse {
  bool isSucceed = 1;
  string test = 2;
}






